feat/#10: S3를 이용한 파일 업로드 구현

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,3 +17,13 @@ spring:
 logging:
   level:
     com.easytrax.easytraxbackend: info
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY_ID}
+      secret-key: ${AWS_SECRET_ACCESS_KEY}
+    region:
+      static: ${S3_REGION:ap-northeast-2}
+    s3:
+      bucket: ${S3_BUCKETNAME:easytrax-bucket}
