--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    // AWS S3 SDK
+    implementation 'software.amazon.awssdk:s3'
+    implementation platform('software.amazon.awssdk:bom:2.20.27')
 }
 
 tasks.named('test') {
