--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,3 +27,12 @@ cloud:
       static: ${S3_REGION:ap-northeast-2}
     s3:
       bucket: ${S3_BUCKETNAME:easytrax-bucket}
+
+jwt:
+  secretKey: ${JWT_SECRET_KEY}
+  access:
+    expiration: ${JWT_ACCESS_EXPIRATION}
+    header: ${JWT_ACCESS_HEADER:Authorization}
+  refresh:
+    expiration: ${JWT_REFRESH_EXPIRATION}
+    header: ${JWT_REFRESH_HEADER:RefreshToken}
