feat/#11: 로그인 보안 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,9 @@ springdoc:
 logging:
   level:
     com.easytrax.easytraxbackend: info
+
+# OAuth Configuration
+oauth:
+  kakao:
+    issuer: ${KAKAO_ISSUER:https://kauth.kakao.com}
+    jwks-uri: ${KAKAO_JWKS_URI:https://kauth.kakao.com/.well-known/jwks.json}
