feat/#25: 수출 라벨/문서 생성 시스템 구현 - 영양성분표 라벨 생성 및 PDF 다운로드 - 상업송장 생성 및 PDF 다운로드

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    // PDF generation
+    implementation 'com.itextpdf:itext7-core:8.0.2'
+    implementation 'com.itextpdf:html2pdf:5.0.2'
 }
 
 tasks.named('test') {
